--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <button id="changeColorButton">Change Color</button>
 
   <h1 class="heading">Image to change</h1>
-  <img id="toggleImage" src="https://static.vecteezy.com/system/resources/thumbnails/008/951/892/small_2x/cute-puppy-pomeranian-mixed-breed-pekingese-dog-run-on-the-grass-with-happiness-photo.jpg" alt="">
+  <img id="toggle-image" src="https://i.guim.co.uk/img/media/5d3da3fc2c5de789cd7bff885ddfbcf15d729209/0_244_4080_2448/master/4080.jpg?width=1200&quality=85&auto=format&fit=max&s=ee25b1f254d221eeb6768bab0e3afbd6" alt="beautiful, cutie kitten">
   <h1>Toggle Content Visibility</h1>
   <button id="hideButton">Show More</button>
   <p id="extraContent" class="hidden">Here is some extra content that was hidden!</p>
